syntax = "proto3";
package api.pb;


service Service {
    rpc Work (WorkRequest) returns (WorkReply) {
    }
    //    rpc AsyncAddWork (WorkRequest) returns (WorkReply) {
    //    }
    //    rpc WorkStatus (WorkRequest) returns (WorkReply) {
    //    }
    rpc Node (NodeRequest) returns (NodeReply) {
    }
    //    rpc NodeStatus (WorkRequest) returns (NodeReply) {
    //    }
}

enum WorkMode {
    LocalMode = 0;
    RemoteMode = 1;
    DownloadMode = 2;
}

enum MessageType {
    Add = 0;
    AsyncAdd = 1;
    Status = 2;
}

message WorkRequest {
    MessageType msg = 1;
    WorkMode work_mode = 2;
    repeated string video_path = 3;
    string poster_path = 4;
    string thumb_path = 5;
    repeated string sample_path = 6;
    string video_info = 7;
}

message WorkReply {
    MessageType msg = 1;
    string work_id = 2;
    string error = 3;
}

message NodeRequest {
    MessageType msg = 1;
}

message NodeReply {
    MessageType msg = 1;
}